# portfolio-forum-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-migrate.sh  pyproject.toml
src/: database.py  insert_testdata_database.py  main.py  migrate_database.py
src/cruds/: comment.py  forum.py
src/models/: comment.py  forum.py
src/routers/: comment.py  forum.py
src/schemas/: comment.py  common.py  error.py  forum.py
tests/: conftest.py  test_comment_delete.py  test_comment_get.py  test_comment_post.py  test_comment_put.py  test_comments_get.py  test_forum_delete.py  test_forum_get.py  test_forum_post.py  test_forum_put.py  test_forums_get.py
