[tool.poetry]
name = "portfolio-forum-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
